2009-03-25  Gustavo Noronha Silva  <gns@gnome.org>

Reviewed by Holger Freyther.

        https://bugs.webkit.org/show_bug.cgi?id=24750
        [GTK] requests download instead of displaying page

        Fix the Content-Type headers we get from soup, so that we set a
        proper media type on the ResourceResponse.

        * platform/network/soup/ResourceHandleSoup.cpp:
        (WebCore::fillResponseFromMessage):

Canonical link: https://commits.webkit.org/34032@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41975 268f45cc-cd09-0410-ab3c-d52691b4dbfc